<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.madesty.madestymwesogame.WelcomeActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_greet"
        android:id="@+id/welcome"
        android:textSize="@dimen/text_size"
        android:layout_weight="4"
        android:gravity="center" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/username"
        android:layout_weight="2"
        android:onClick="onClick"
        android:gravity="center" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/opponent"
        android:id="@+id/choose"
        android:layout_weight="3"
        android:textSize="@dimen/small_textsize"
        android:gravity="center" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/opp1"
        android:id="@+id/computer"
        android:layout_weight="2"
        android:onClick="onClick" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/opp2"
        android:id="@+id/human"
        android:layout_weight="2"
        android:onClick="onClick" />

</LinearLayout>
